tests/tactics/success/0006-exact-named.ec
(* -------------------------------------------------------------------- *)
lemma L: forall a, a => a.
proof. move=> a h; exact h. qed.